--- a/solutions/devsprint-michel-ferreira-1/src/main/resources/application.properties
+++ b/solutions/devsprint-michel-ferreira-1/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/dev-pass
 spring.datasource.username=root
-spring.datasource.password=secret
+spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=none
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
